--- a/AccountabilityBuddy/Base.lproj/Main.storyboard
+++ b/AccountabilityBuddy/Base.lproj/Main.storyboard
@@ -675,14 +675,14 @@
                                 <color key="sectionIndexBackgroundColor" red="0.75241130030000003" green="0.90118198240000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ForumCategoryCell" id="71a-FL-isH" customClass="ForumCategoryCell" customModule="AccountabilityBuddy" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.666666030883789" width="390" height="64.333335876464844"/>
+                                        <rect key="frame" x="0.0" y="44.666666030883789" width="390" height="63.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="71a-FL-isH" id="354-8t-emd">
-                                            <rect key="frame" x="0.0" y="0.0" width="390" height="64.333335876464844"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="63.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Health" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hvS-4J-MtU" customClass="Cata">
-                                                    <rect key="frame" x="36" y="16.000000000000004" width="318" height="32.333333333333343"/>
+                                                    <rect key="frame" x="36" y="16" width="318" height="31.666666666666671"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -701,7 +701,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ForumCell" id="svm-h7-kBa" customClass="ForumCell" customModule="AccountabilityBuddy" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="109.00000190734863" width="390" height="88"/>
+                                        <rect key="frame" x="0.0" y="108.33333396911621" width="390" height="88"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="svm-h7-kBa" id="QeV-b4-h5b">
                                             <rect key="frame" x="0.0" y="0.0" width="390" height="88"/>
@@ -766,14 +766,59 @@
                     <view key="view" contentMode="scaleToFill" id="2yM-ym-Bbk">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dPQ-hr-pPn">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Wv-xo-0To">
+                                        <rect key="frame" x="26" y="22" width="338" height="20.333333333333329"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20.333333333333329" id="0B4-4S-YT0"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="di9-Au-Q31">
+                                        <rect key="frame" x="26" y="58.333333333333314" width="338" height="681.66666666666674"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="5Wv-xo-0To" firstAttribute="leading" secondItem="ID2-U9-UL7" secondAttribute="leading" constant="26" id="2pa-tG-qNO"/>
+                                    <constraint firstItem="ID2-U9-UL7" firstAttribute="trailing" secondItem="di9-Au-Q31" secondAttribute="trailing" constant="26" id="DIY-AU-ax2"/>
+                                    <constraint firstItem="ID2-U9-UL7" firstAttribute="trailing" secondItem="5Wv-xo-0To" secondAttribute="trailing" constant="26" id="JuR-jg-YKD"/>
+                                    <constraint firstAttribute="bottom" secondItem="di9-Au-Q31" secondAttribute="bottom" constant="100" id="Tnp-Lf-kCz"/>
+                                    <constraint firstItem="ID2-U9-UL7" firstAttribute="bottom" secondItem="di9-Au-Q31" secondAttribute="bottom" constant="16" id="g0i-3g-6NE"/>
+                                    <constraint firstItem="5Wv-xo-0To" firstAttribute="top" secondItem="ID2-U9-UL7" secondAttribute="top" constant="110" id="oV3-cr-rMy"/>
+                                    <constraint firstAttribute="trailing" secondItem="5Wv-xo-0To" secondAttribute="trailing" constant="26" id="pIa-nn-FXT"/>
+                                    <constraint firstItem="di9-Au-Q31" firstAttribute="top" secondItem="5Wv-xo-0To" secondAttribute="bottom" constant="16" id="svC-Uc-FIH"/>
+                                    <constraint firstItem="di9-Au-Q31" firstAttribute="leading" secondItem="ID2-U9-UL7" secondAttribute="leading" constant="26" id="wyb-eO-Fuv"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="1U3-5a-xYT"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="ID2-U9-UL7"/>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="530-8E-BmA"/>
                         <color key="backgroundColor" red="0.75241130030000003" green="0.90118198240000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="dPQ-hr-pPn" secondAttribute="bottom" id="2w6-6s-CVi"/>
+                            <constraint firstItem="dPQ-hr-pPn" firstAttribute="top" secondItem="2yM-ym-Bbk" secondAttribute="top" id="atp-rP-crY"/>
+                            <constraint firstItem="dPQ-hr-pPn" firstAttribute="trailing" secondItem="530-8E-BmA" secondAttribute="trailing" id="igk-n6-NJj"/>
+                            <constraint firstItem="dPQ-hr-pPn" firstAttribute="leading" secondItem="530-8E-BmA" secondAttribute="leading" id="j8w-YN-8s4"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Forum" id="WAY-80-mEi"/>
+                    <connections>
+                        <outlet property="articleContent" destination="di9-Au-Q31" id="p8B-o1-GeS"/>
+                        <outlet property="articleTitle" destination="5Wv-xo-0To" id="XVf-u8-LGK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sv7-8a-8sr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6637" y="-288"/>
+            <point key="canvasLocation" x="6636.9230769230771" y="-288.62559241706163"/>
         </scene>
         <!--Forum-->
         <scene sceneID="T1A-Gj-wDh">
